--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,8 @@ jobs:
 
       - name: Install hurl
         run: |
-          sudo apt-get update
-          sudo apt-get install -y hurl
+          curl --proto '=https' --tlsv1.2 -LsSf https://github.com/Orange-OpenSource/hurl/releases/download/4.11.0/hurl-4.11.0-x86_64-unknown-linux-gnu.tar.gz | tar xzf -
+          sudo mv hurl /usr/local/bin/
           hurl --version
 
       - name: Wait for API to be ready
@@ -143,8 +143,8 @@ jobs:
 
       - name: Install hurl
         run: |
-          sudo apt-get update
-          sudo apt-get install -y hurl
+          curl --proto '=https' --tlsv1.2 -LsSf https://github.com/Orange-OpenSource/hurl/releases/download/4.11.0/hurl-4.11.0-x86_64-unknown-linux-gnu.tar.gz | tar xzf -
+          sudo mv hurl /usr/local/bin/
           hurl --version
 
       - name: Health Check
