--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ env:
   IMAGE_TAG: latest
   PORT: 3000
   DOCKER_REGISTRY: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io
-  AZURE_WEBAPP_NAME: ${{ secrets.AZURE_WEBAPP_NAME_CAMILO }}
+  AZURE_WEBAPP_NAME: devopswise0
 
 jobs:
   test:
@@ -121,6 +121,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push-image
     if: success()
+    env:
+      AZURE_WEBAPP_NAME: devopswise0
+      DOCKER_REGISTRY: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io
+      IMAGE_REPOSITORY: pds006-device-management
+      IMAGE_TAG: latest
+      PORT: 3000
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -128,9 +134,10 @@ jobs:
       - name: Deploy Docker Image to App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME_CAMILO }}
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           images: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_CAMILO }}
+          startup-command: ''
 
       - name: Wait for Deployment
         run: sleep 60
@@ -140,6 +147,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-to-azure
     if: always()
+    env:
+      AZURE_WEBAPP_NAME: devopswise0
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -156,7 +165,7 @@ jobs:
           source $HOME/.cargo/env
           echo "Waiting for deployed app to respond..."
           for i in {1..20}; do
-            response=$(curl -s -o /dev/null -w "%{http_code}" "https://${{ secrets.AZURE_WEBAPP_NAME_CAMILO }}.azurewebsites.net/api/computers")
+            response=$(curl -s -o /dev/null -w "%{http_code}" "https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/api/computers")
             echo "Attempt $i: HTTP $response"
             
             if [ "$response" = "200" ]; then
@@ -176,7 +185,7 @@ jobs:
       - name: Run Smoke Tests
         run: |
           source $HOME/.cargo/env
-          $HOME/.cargo/bin/hurl session.hurl --variable host=https://${{ secrets.AZURE_WEBAPP_NAME_CAMILO }}.azurewebsites.net
+          $HOME/.cargo/bin/hurl session.hurl --variable host=https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net
         continue-on-error: true
 
       - name: Post Deployment Report
@@ -186,6 +195,6 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Application**: PDS006 Device Management" >> $GITHUB_STEP_SUMMARY
           echo "- **Environment**: Production" >> $GITHUB_STEP_SUMMARY
-          echo "- **Deployed URL**: https://${{ secrets.AZURE_WEBAPP_NAME_CAMILO }}.azurewebsites.net" >> $GITHUB_STEP_SUMMARY
+          echo "- **Deployed URL**: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net" >> $GITHUB_STEP_SUMMARY
           echo "- **Docker Image**: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Timestamp**: $(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_STEP_SUMMARY
