--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,15 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      port:
-        description: 'Port to run the application on'
-        required: false
-        default: '3000'
-      environment:
-        description: 'Deployment environment'
-        required: false
-        default: 'development'
 
 env:
   IMAGE_REPOSITORY: pds006-device-management
@@ -27,47 +18,27 @@ jobs:
     name: 'Run API Tests'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-
-      - name: Install Dependencies
-        run: bun install
-
-      - name: Start Application
-        run: bun run dev &
+      - run: bun install
+      - run: bun run dev &
         continue-on-error: true
-
-      - name: Install hurl
-        run: |
+      - run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           source $HOME/.cargo/env
           cargo install hurl
-          $HOME/.cargo/bin/hurl --version
-
-      - name: Wait for API to be ready
-        run: |
+      - run: |
           for i in {1..30}; do
             if curl -s -o /dev/null -w "%{http_code}" "http://localhost:3000/api/computers" | grep -q "200\|404"; then
-              echo "API is ready"
               break
             fi
-            echo "Waiting for API... (attempt $i)"
             sleep 2
           done
-
-      - name: Run API Tests
-        run: |
-          source $HOME/.cargo/env
-          $HOME/.cargo/bin/hurl session.hurl --variable host=http://localhost:3000
+      - run: source $HOME/.cargo/env && $HOME/.cargo/bin/hurl session.hurl --variable host=http://localhost:3000
         continue-on-error: true
-
-      - name: Stop Application
-        run: pkill -f "bun run dev"
+      - run: pkill -f "bun run dev"
         continue-on-error: true
 
   build-and-push-image:
@@ -76,120 +47,54 @@ jobs:
     needs: test
     if: success()
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Azure Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io
           username: ${{ secrets.ACR_USERNAME_CAMILO }}
           password: ${{ secrets.ACR_PASSWORD_CAMILO }}
-
-      - name: Build Docker Image Metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha
-            type=raw,value=${{ env.IMAGE_TAG }}
-
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }}
           file: .devcontainer/Dockerfile
-          build-args: |
-            PORT=${{ env.PORT }}
 
   deploy-to-azure:
     name: 'Deploy to Azure App Service'
     runs-on: ubuntu-latest
     needs: build-and-push-image
     if: success()
-    env:
-      AZURE_WEBAPP_NAME: devopswise0
-      DOCKER_REGISTRY: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io
-      IMAGE_REPOSITORY: pds006-device-management
-      IMAGE_TAG: latest
-      PORT: 3000
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Deploy Docker Image to App Service
-        uses: azure/webapps-deploy@v2
+      - uses: actions/checkout@v4
+      - uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          images: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_CAMILO }}
-
-      - name: Wait for Deployment
-        run: sleep 60
+          images: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }}
+      - run: sleep 60
 
   verify-deployment:
     name: 'Verify Deployment'
     runs-on: ubuntu-latest
     needs: deploy-to-azure
     if: always()
-    env:
-      AZURE_WEBAPP_NAME: devopswise0
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install hurl
-        run: |
+      - uses: actions/checkout@v4
+      - run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           source $HOME/.cargo/env
           cargo install hurl
-          $HOME/.cargo/bin/hurl --version
-
-      - name: Health Check
-        run: |
+      - run: |
           source $HOME/.cargo/env
-          echo "Waiting for deployed app to respond..."
           for i in {1..20}; do
             response=$(curl -s -o /dev/null -w "%{http_code}" "https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/api/computers")
-            echo "Attempt $i: HTTP $response"
-            
             if [ "$response" = "200" ]; then
-              echo "✓ Health check successful (HTTP 200)"
               break
             fi
-            
-            if [ $i -eq 20 ]; then
-              echo "✗ Health check failed after 20 attempts"
-              exit 1
-            fi
-            
             sleep 15
           done
         continue-on-error: true
-
-      - name: Run Smoke Tests
-        run: |
-          source $HOME/.cargo/env
-          $HOME/.cargo/bin/hurl session.hurl --variable host=https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net
+      - run: source $HOME/.cargo/env && $HOME/.cargo/bin/hurl session.hurl --variable host=https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net
         continue-on-error: true
-
-      - name: Post Deployment Report
-        if: always()
-        run: |
-          echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Application**: PDS006 Device Management" >> $GITHUB_STEP_SUMMARY
-          echo "- **Environment**: Production" >> $GITHUB_STEP_SUMMARY
-          echo "- **Deployed URL**: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net" >> $GITHUB_STEP_SUMMARY
-          echo "- **Docker Image**: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Timestamp**: $(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_STEP_SUMMARY
