--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,96 +1,83 @@
-name: PDS006 Continuous Delivery
+name: Azure Continuous Delivery
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      IMAGE_REPOSITORY:
+        description: 'Repository of the image (same as declared in App Service creation)'
+        required: true
+        default: 'pds006-device-management'
+      IMAGE_TAG:
+        description: 'Tag of the image'
+        required: true
+        default: 'latest'
+      AZURE_WEBAPP_NAME:
+        description: 'Nombre del App Service creado en Azure'
+        required: true
+        default: 'devopswise0'
+      PORT:
+        description: 'Port of the application'
+        required: true
+        default: '443'
 
 env:
-  IMAGE_REPOSITORY: pds006-device-management
-  IMAGE_TAG: latest
-  DOCKER_REGISTRY: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io
-  IMAGE_URL: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io/pds006-device-management:latest
+  IMAGE_URL: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io/${{ github.event.inputs.IMAGE_REPOSITORY }}:${{ github.event.inputs.IMAGE_TAG }}
 
 jobs:
-  test:
-    name: 'Run API Tests'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-      - run: bun install
-      - run: bun run dev &
-        continue-on-error: true
-      - run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          source $HOME/.cargo/env
-          cargo install hurl
-      - run: |
-          for i in {1..30}; do
-            if curl -s -o /dev/null -w "%{http_code}" "http://localhost:3000/api/computers" | grep -q "200\|404"; then
-              break
-            fi
-            sleep 2
-          done
-      - run: source $HOME/.cargo/env && $HOME/.cargo/bin/hurl session.hurl --variable host=http://localhost:3000
-        continue-on-error: true
-      - run: pkill -f "bun run dev"
-        continue-on-error: true
-
   build-and-push-image:
     name: 'Build and Push to ACR'
     runs-on: ubuntu-latest
-    needs: test
-    if: success()
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: azure/docker-login@v1
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.ACR_NAME_CAMILO }}.azurecr.io
           username: ${{ secrets.ACR_USERNAME_CAMILO }}
           password: ${{ secrets.ACR_PASSWORD_CAMILO }}
-      - uses: docker/build-push-action@v6
+
+      - name: Build and Push to ACR
+        uses: docker/build-push-action@v6
         with:
           push: true
           tags: ${{ env.IMAGE_URL }}
           file: .devcontainer/Dockerfile
 
   deploy:
-    name: 'Deploy to Azure'
+    name: 'Deploy remote container to Azure'
     runs-on: ubuntu-latest
     needs: build-and-push-image
-    if: success()
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: azure/webapps-deploy@v3
+      - name: Deploy to Azure Web App for Container
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: devopswise0
+          app-name: ${{ github.event.inputs.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_CAMILO }}
           images: ${{ env.IMAGE_URL }}
 
-  verify-deployment:
-    name: 'Verify Deployment'
+  test-deploy:
+    name: 'Test deployed service'
     runs-on: ubuntu-latest
-    needs: deploy
-    if: always()
+    needs: [build-and-push-image, deploy]
+
     steps:
-      - uses: actions/checkout@v4
-      - run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          source $HOME/.cargo/env
-          cargo install hurl
-      - run: |
-          source $HOME/.cargo/env
-          for i in {1..20}; do
-            response=$(curl -s -o /dev/null -w "%{http_code}" "https://devopswise0.azurewebsites.net/api/computers")
-            if [ "$response" = "200" ]; then
-              break
-            fi
-            sleep 15
-          done
-        continue-on-error: true
-      - run: source $HOME/.cargo/env && $HOME/.cargo/bin/hurl session.hurl --variable host=https://devopswise0.azurewebsites.net
-        continue-on-error: true
+      - name: Checkout session.hurl
+        uses: actions/checkout@v3
+        with:
+          sparse-checkout: |
+            session.hurl
+          sparse-checkout-cone-mode: false
+
+      - name: Setup hurl (API testing tool)
+        uses: gacts/install-hurl@v1
+
+      - name: Test API
+        run: |
+          hurl --variable host=https://${{ github.event.inputs.AZURE_WEBAPP_NAME }}.azurewebsites.net:${{ github.event.inputs.PORT }} \
+               --connect-timeout 20s \
+               --error-format long \
+               --verbose
