OpenTelemitry with Axiom

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 BETTER_AUTH_SECRET=LbagX2VEDutEpP1W8XTrculsiW12OT8n
 BETTER_AUTH_URL=http://localhost:3000
 DB_FILE_NAME=db.sqlite
+
+
+# Axiom Configuration
+AXIOM_ORG_ID=devops
+AXIOM_DATASET=devops
+AXIOM_TOKEN=xaat-74411bf4-236c-46c9-bfed-f27e4dda2e36
+
+# Application Configuration
+NODE_ENV=development
+PORT=3000
