--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "test": "hurl session.hurl --variable host=http://localhost:8000",
     "test:verbose": "hurl session.hurl --variable host=http://localhost:8000 --verbose",
     "test:host": "hurl session.hurl --variable host=",
+    "test:axiom": "bun run src/axiom-test.ts",
+    "test:axiom:stress": "bun run src/axiom-stress-test.ts",
+    "test:axiom:massive": "bun run src/axiom-massive-test.ts",
     "docker:build": "docker build -t pds006-app:latest -f .devcontainer/Dockerfile .",
     "docker:run": "docker run -d -p 8000:3000 --name pds006-container pds006-app:latest",
     "docker:stop": "docker stop pds006-container",
@@ -14,6 +17,13 @@
   },
   "dependencies": {
     "@elysiajs/openapi": "^1.4.10",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.208.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/sdk-logs": "^0.208.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
     "better-auth": "^1.3.13",
     "drizzle-orm": "^0.44.5",
     "elysia": "latest",
